@@ -4,8 +4,8 @@
 
 import zope.app.generations
 
-minimum_generation = 0
-generation = 0
+minimum_generation = 1
+generation = 1
 
 manager = zope.app.generations.generations.SchemaManager(
     minimum_generation, generation, "zeit.objectlog.generation")
